# 133-IoT-Enabled-Smart-Lighting-System-using-STM32-Microcontroller-with-High-Performance-ARM-Cortex-M

./: README.md  citation.txt
station5.3.1/: sdkconfig  sdkconfig.old
station5.3.1/components/espressif__esp_lcd_touch_ft5x06/: CMakeLists.txt  esp_lcd_touch_ft5x06.c
station5.3.1/components/espressif__esp_lcd_touch_ft5x06/include/: esp_lcd_touch_ft5x06.h
station5.3.1/main/: CMakeLists.txt  idf_component.yml  mqtt_cjson.c  mqtt_cjson.h  station_example_main.c
station5.3.1/main/esp_lvgl_port_init/: esp_lvgl_port_init.c  esp_lvgl_port_init.h
station5.3.1/main/esp_spi_lcd/: esp_spi_lcd.c  esp_spi_lcd.h
station5.3.1/main/i2c_GXHTC3/: i2c_gxhtc3.c  i2c_gxhtc3.h
station5.3.1/main/i2c_master/: i2c.c  i2c.h
station5.3.1/main/spi_master/: spi.c  spi.h
station5.3.1/main/ui/custom/: custom.c  custom.h
